# stinger_lite

./: .gitmodules  CMakeLists.txt
cmake/: emu-rules.cmake  emu-toolchain.cmake  emu_clang_wrapper.sh  official-toolchain.cmake
inc/: stinger.h  stinger_error.h  stinger_internal.h  stinger_names.h.in  stinger_traversal.h
lib/: CMakeLists.txt
lib/compat/src/: getMemorySize.c
lib/stinger_alg/: CMakeLists.txt
lib/stinger_alg/inc/: betweenness.h  rmat.h  streaming_connected_components.h
lib/stinger_alg/src/: betweenness.c  bfs.c  clustering.c  emu_pagerank.c  static_components.c  weakly_connected_components.c
lib/stinger_core/: CMakeLists.txt
lib/stinger_core/inc/: emu-array.h  emu_array.h  emu_xmalloc.h  stinger.h  stinger_atomics.h  stinger_defs.h.in  stinger_internal.h  stinger_names.h.in  stinger_physmap.h  stinger_traversal.h  stinger_vertex.h
lib/stinger_core/src/: emu-array.c  emu_array.c  emu_xmalloc.c  getMemorySize.c  stinger.c  stinger_deprecated.c  stinger_names.c  stinger_physmap.c  stinger_shared.c  stinger_vertex.c  xmalloc.c
params/: medium.txt  test.txt
src/: CMakeLists.txt  core_util.c  emu-array.c  emu-array.h  emu_array_test.c  emu_array_test.inc  layout.c  layout.h  main.c  stinger.c  stinger_names.c  stinger_shared.c  stinger_vertex.c  xmalloc.c
stinger_core/: CMakeLists.txt
stinger_core/cmake/: emu-toolchain.cmake
stinger_core/inc/: stinger_defs.h.in
stinger_core/src/: core_util.c  stinger.c  stinger_vertex.c
